force-app/main/default/objects/leaseworks__Scenario_Component__c/leaseworks__Scenario_Component__c.object-meta.xml
<CustomObject>
    <label>Fx Component Output</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fx Component Output</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>