force-app/main/default/objects/leaseworks__Scenario_Component__c/fields/leaseworks__Annual_Escalation__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Annual_Escalation__c</fullName>
    <label>MR_Escaclation_Rate</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>