force-app/main/default/objects/leaseworks__Scenario_Component__c/fields/leaseworks__Assembly_MR_Info__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assembly_MR_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplemental Rent</label>
    <referenceTo>leaseworks__Assembly_MR_Rate__c</referenceTo>
    <relationshipLabel>Fx Component Output</relationshipLabel>
    <relationshipName>Fx_Component_Output</relationshipName>
    <type>Lookup</type>
</CustomField>