force-app/main/default/objects/leaseworks__Scenario_Component__c/fields/leaseworks__Base_Rate_As_per_Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Base_Rate_As_per_Lease__c</fullName>
    <formula>leaseworks__Assembly_MR_Info__r.leaseworks__Base_MRR__c</formula>
    <label>Base Rate ( As per Lease)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>