force-app/main/default/objects/leaseworks__Scenario_Component__c/fields/leaseworks__CSO_Start_of_Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CSO_Start_of_Lease__c</fullName>
    <label>CSO (Start of Lease)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>