force-app/main/default/objects/leaseworks__Scenario_Component__c/fields/leaseworks__Current_Catalog_Year__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Current_Catalog_Year__c</fullName>
    <description>Current catalog year set in maintenance program event</description>
    <label>Current Catalog Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>