force-app/main/default/objects/leaseworks__Scenario_Component__c/fields/leaseworks__Down_Time_For_Overhaul_Months__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Down_Time_For_Overhaul_Months__c</fullName>
    <label>Down Time For Overhaul (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>