force-app/main/default/objects/leaseworks__Scenario_Component__c/fields/leaseworks__Event_Cost_Escalation__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Event_Cost_Escalation__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Annual Event Cost Escalation to project future Event Cost for Projected Events and Forecast</description>
    <inlineHelpText>Annual Event Cost Escalation to project future Event Cost for Projected Events and Forecast</inlineHelpText>
    <label>Event Cost Escalation</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>