force-app/main/default/objects/leaseworks__Scenario_Component__c/fields/leaseworks__First_Escalation_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__First_Escalation_Date__c</fullName>
    <label>First Escalation Date</label>
    <type>Date</type>
</CustomField>