force-app/main/default/objects/leaseworks__Scenario_Component__c/fields/leaseworks__Fx_Assembly_Event_Input_LP__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Fx_Assembly_Event_Input_LP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fx Assembly Event Input</label>
    <referenceTo>leaseworks__Fx_Assembly_Event_Input__c</referenceTo>
    <relationshipLabel>Fx Component Output</relationshipLabel>
    <relationshipName>Fx_Component_Output</relationshipName>
    <type>Lookup</type>
</CustomField>