force-app/main/default/objects/leaseworks__Scenario_Component__c/fields/leaseworks__Fx_General_Input__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Fx_General_Input__c</fullName>
    <label>Fx General Input</label>
    <referenceTo>leaseworks__Scenario_Input__c</referenceTo>
    <relationshipLabel>Fx Component Output</relationshipLabel>
    <relationshipName>Scenario_Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>