force-app/main/default/objects/leaseworks__Scenario_Component__c/fields/leaseworks__Life_Limit_Interval_2_Cycles__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Life_Limit_Interval_2_Cycles__c</fullName>
    <label>Life Limit Interval 2 (Cycles)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>