force-app/main/default/objects/leaseworks__Scenario_Component__c/fields/leaseworks__Life_Limited_Part_LLP__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Life_Limited_Part_LLP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Life Limited Part (LLP)</label>
    <referenceTo>leaseworks__Sub_Components_LLPs__c</referenceTo>
    <relationshipName>Scenario_Components</relationshipName>
    <type>Lookup</type>
</CustomField>