force-app/main/default/objects/leaseworks__Scenario_Component__c/fields/leaseworks__LLP_Build_Standard__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__LLP_Build_Standard__c</fullName>
    <label>LLP Build Standard</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>