force-app/main/default/objects/leaseworks__Scenario_Component__c/fields/leaseworks__MR_Escalation_Month__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_Escalation_Month__c</fullName>
    <defaultValue>1</defaultValue>
    <description>This field holds the escalation month ONLY for MR and not Rent.</description>
    <label>MR_Escalation_Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>