force-app/main/default/objects/leaseworks__Scenario_Component__c/fields/leaseworks__RC_Applicability__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__RC_Applicability__c</fullName>
    <label>RC Applicability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Since Last Event</fullName>
            </value>
            <value>
                <fullName>Remaining To Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>