force-app/main/default/objects/leaseworks__Scenario_Component__c/fields/leaseworks__RC_FC__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__RC_FC__c</fullName>
    <label>RC FC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>