force-app/main/default/objects/leaseworks__Scenario_Component__c/fields/leaseworks__Return_Condition_Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Return_Condition_Status__c</fullName>
    <description>Calculates the last month whose return condition is false</description>
    <label>Return Condition Status</label>
    <summarizedField>leaseworks__Monthly_Scenario__c.leaseworks__End_Date__c</summarizedField>
    <summaryFilterItems>
        <field>leaseworks__Monthly_Scenario__c.leaseworks__Return_Condition_Status__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>leaseworks__Monthly_Scenario__c.leaseworks__Fx_Component_Output__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>