force-app/main/default/objects/leaseworks__Scenario_Component__c/fields/leaseworks__Total_CF__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_CF__c</fullName>
    <label>_Total CF</label>
    <summarizedField>leaseworks__Monthly_Scenario__c.leaseworks__Cash_Flow__c</summarizedField>
    <summaryForeignKey>leaseworks__Monthly_Scenario__c.leaseworks__Fx_Component_Output__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>