force-app/main/default/objects/leaseworks__Scenario_Component__c/fields/leaseworks__Total_Claim_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Claim_F__c</fullName>
    <formula>if($Setup.leaseworks__LeaseWorksSettings__c.leaseworks__CustType__c==&#39;AIRLINE&#39;, 1 , -1) 
* leaseworks__Total_Claim__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Claim</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>