force-app/main/default/objects/leaseworks__Scenario_Component__c/fields/leaseworks__Total_EOLA_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_EOLA_Amount__c</fullName>
    <label>Total EOLA Amount</label>
    <summarizedField>leaseworks__Monthly_Scenario__c.leaseworks__Eola_Amount__c</summarizedField>
    <summaryForeignKey>leaseworks__Monthly_Scenario__c.leaseworks__Fx_Component_Output__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>