force-app/main/default/objects/leaseworks__Scenario_Component__c/fields/leaseworks__Total_FC__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_FC__c</fullName>
    <description>Only For MR Profile</description>
    <label>Total FC(MR Profile)</label>
    <summarizedField>leaseworks__Monthly_Scenario__c.leaseworks__FC__c</summarizedField>
    <summaryFilterItems>
        <field>leaseworks__Monthly_Scenario__c.leaseworks__Historical_Month__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>leaseworks__Monthly_Scenario__c.leaseworks__Fx_Component_Output__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>