force-app/main/default/objects/leaseworks__Scenario_Component__c/fields/leaseworks__Total_MR__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_MR__c</fullName>
    <label>Total MR</label>
    <summarizedField>leaseworks__Monthly_Scenario__c.leaseworks__MR_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>leaseworks__Monthly_Scenario__c.leaseworks__Historical_Month__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>leaseworks__Monthly_Scenario__c.leaseworks__Fx_Component_Output__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>