force-app/main/default/objects/leaseworks__Scenario_Component__c/fields/leaseworks__Total_MR_Balance__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_MR_Balance__c</fullName>
    <label>Total MR Balance</label>
    <summarizedField>leaseworks__Monthly_Scenario__c.leaseworks__Net_MR__c</summarizedField>
    <summaryForeignKey>leaseworks__Monthly_Scenario__c.leaseworks__Fx_Component_Output__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>