force-app/main/default/objects/leaseworks__Scenario_Component__c/fields/leaseworks__TSN_Start_of_Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__TSN_Start_of_Lease__c</fullName>
    <label>TSN (Start of Lease)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>